@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-04-18T00:57:37Z",
+  "timestamp" : "2025-04-29T00:59:20Z",
   "count_outdated" : 100,
   "uniques_outdated" : 82,
-  "count" : 101,
-  "uniques" : 83,
+  "count" : 102,
+  "uniques" : 84,
   "clones" : [
     {
       "timestamp": "2025-04-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
